--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Common.BuyerRequestSuccessful"></activity>
+        <activity android:name=".View_Gig_For_Customer"></activity>
+        <activity android:name=".Update_Gig_by_Admin" />
+        <activity android:name=".View_Gig_For_Admin" />
+        <activity android:name=".Create_A_Gig" />
+        <activity android:name=".Become_A_Seller" />
+        <activity android:name=".Common.BuyerRequestSuccessful" />
         <activity android:name=".Common.AccountCreateSuccessfully" />
         <activity android:name=".Common.PostRequestUpdatePage" />
         <activity android:name=".Common.PostARequestHome" />
