--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,10 +7,13 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".UpdateOrder"></activity>
+        <activity android:name=".OrderSuccess" />
+        <activity android:name=".AddPayment" />
         <activity
             android:name=".OrdersToBeReceived"
             android:label="@string/title_activity_orders_to_be_received"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".OrdersToMe"
             android:parentActivityName=".UserDashboard" />
