--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,13 @@ dependencies {
     implementation 'androidx.viewpager:viewpager:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.1.0'
+
+    //new metirial library
+    implementation 'com.google.android.material:material:1.2.0-alpha04'
+
+    //image crop library
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
