--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,27 +2,33 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.onlinefreelaceapp">
 
+
+    <!-- Camera Permission-->
+    <uses-permission android:name="android.permission.CAMERA"/>
+
+    <!-- external storage permission Permission-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    
+
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-<<<<<<< HEAD
-        <activity android:name=".View_Gig_For_Customer"></activity>
+        <activity android:name=".Display_Gigs_page"></activity>
+        <activity android:name=".View_Gig_For_Customer" />
         <activity android:name=".Update_Gig_by_Admin" />
         <activity android:name=".View_Gig_For_Admin" />
         <activity android:name=".Create_A_Gig" />
         <activity android:name=".Become_A_Seller" />
-=======
         <activity
             android:name=".OrdersToBeReceived"
             android:label="@string/title_activity_orders_to_be_received"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".OrdersToMe"
             android:parentActivityName=".UserDashboard" />
         <activity android:name=".ReviewOrder" />
->>>>>>> 23442da48771a2fbc0a3302597c41ef4c82f7c8f
         <activity android:name=".Common.BuyerRequestSuccessful" />
         <activity android:name=".Common.AccountCreateSuccessfully" />
         <activity android:name=".Common.PostRequestUpdatePage" />
@@ -45,6 +51,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat"/>
 
         <meta-data
             android:name="preloaded_fonts"
