--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,25 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.onlinefreelaceapp">
-
-
-    <!-- Camera Permission-->
-    <uses-permission android:name="android.permission.CAMERA"/>
-
-    <!-- external storage permission Permission-->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    
+    <!-- Camera Permission -->
+    <uses-permission android:name="android.permission.CAMERA" /> <!-- external storage permission Permission -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Display_Gigs_page"></activity>
+        <activity android:name=".ui.main.ViewAsCustomerActivity"></activity>
+        <activity android:name=".ui.main.GigViewActivity" />
+        <activity android:name=".Display_Gigs_page">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+        </activity>
         <activity android:name=".View_Gig_For_Customer" />
         <activity android:name=".Update_Gig_by_Admin" />
         <activity android:name=".View_Gig_For_Admin" />
-        <activity android:name=".Create_A_Gig" />
+        <activity android:name=".Create_A_Gig">
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
+        </activity>
         <activity android:name=".Become_A_Seller" />
         <activity
             android:name=".OrdersToBeReceived"
@@ -37,24 +49,22 @@
         <activity android:name=".Common.RequestPostUserView" />
         <activity android:name=".Common.PostRequestPageTwo" />
         <activity android:name=".Common.PostRequest" />
-        <activity android:name=".PostARequest.post_request" />
         <activity android:name=".Common.LoginSignup.SignUpPageTwo" />
         <activity android:name=".Common.LoginSignup.SignUp" />
         <activity android:name=".Common.LoginSignup.Login" />
         <activity android:name=".Common.LoginSignup.RetailerStartUpScreen" />
         <activity android:name=".Common.OnBoarding" />
         <activity android:name=".UserDashboard" />
-        <activity android:name=".Common.OnLine">
+        <activity android:name=".Common.OnLine" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-            android:theme="@style/Base.Theme.AppCompat"/>
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
 
         <meta-data
             android:name="preloaded_fonts"
