--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,7 +68,8 @@
         <activity android:name=".Common.LoginSignup.Login" />
         <activity android:name=".Common.LoginSignup.RetailerStartUpScreen" />
         <activity android:name=".Common.OnBoarding" />
-        <activity android:name=".UserDashboard" />
+        <activity android:name=".UserDashboard"
+            android:noHistory="true"/>
         <activity android:name=".Common.OnLine">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
