--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,16 @@ dependencies {
 
     //shimmer
     implementation 'com.facebook.shimmer:shimmer:0.4.0@aar'
+
+    //testing
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'androidx.test:rules:1.1.0'
+
+
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+
+
 }
